# testrapidjson

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_backup.txt  README.md  arrayjson.txt  testrapidjson.cpp
.github/workflows/: cmake.yml
docs/: usage.md
src/: jsonarray.cpp  listStrToJson.cpp  listStrToJson2.cpp  listToString.cpp  testrapidjson.cpp
